--- a/plop-templates/dbGetFunction.hbs
+++ b/plop-templates/dbGetFunction.hbs
@@ -3,35 +3,37 @@
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
 
-{{#if paramsFields}}
-export type T{{methodPascalName}}Params = {
-{{#each paramsFields}}
+{{#if methodParamsColumns}}
+export type {{methodParamsTypeName}} = {
+{{#each methodParamsColumns}}
   {{camelName}}: {{tsType}}
 {{/each}}
 }
 {{/if}}
 
 
-{{{tsReturnType}}}
+export type {{methodTypeName}} = {
+{{#each methodColumns}}
+  {{camelName}}{{optional}}: {{tsType}}
+{{/each}}
+}
 
 
-{{#if indexFields}}
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
-export type T{{methodPascalName}}RecordBy{{typeRecordName}} = Record<string, T{{methodPascalName}}>
+export type {{indexTypeName}} = Record<string, {{methodTypeName}}>
 {{else}}
-export type T{{methodPascalName}}RecordBy{{typeRecordName}} = Record<number, T{{methodPascalName}}> 
-{{/if}}
+export type {{indexTypeName}} = Record<number, {{methodTypeName}}> 
 {{/if}}
 
-export async function get{{methodPascalName}}(params: T{{methodPascalName}}Params) {
+export async function {{methodName}}(params: {{methodParamsTypeName}}) {
   try {
     const sqlParams = Object.values(params)
     const sql = `SELECT * FROM {{schema}}.{{method}}({{sqlParamsPlaceholders}});`
     
     const result = await query(sql, sqlParams)
-    return result.rows as T{{methodPascalName}}[]
+    return result.rows as {{methodTypeName}}[]
   } catch (error) {
-    console.error("Error fetching get{{methodPascalName}}:", error)
-    throw new Error("Failed to fetch get{{methodPascalName}}")
+    console.error("Error fetching {{methodName}}:", error)
+    throw new Error("Failed to fetch {{methodName}}")
   }
 }
