--- a/plop-templates/hookGetFunction.hbs
+++ b/plop-templates/hookGetFunction.hbs
@@ -4,14 +4,16 @@
 import { {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
 import { {{indexMethodName}} } from "@/methods/functions/converters"
 import { {{methodCamelName}}Atom } from "@/store/atoms"
+import { {{#if methodParamsColumns}}, {{methodParamsTypeName}}{{/if}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
 import { useAtomValue, useSetAtom } from "jotai"
 import { useEffect, useRef } from "react"
 import useSWR from "swr"
 
-export function useFetch{{methodPascalName}}() {
+export function useFetch{{methodPascalName}}({{#if methodParamsColumns}} { params }: { params: {{methodParamsTypeName}} }{{/if}}) {
   const {{methodCamelName}} = useAtomValue({{methodCamelName}}Atom)
   const set{{methodPascalName}} = useSetAtom({{methodCamelName}}Atom)
-  const { data } = useSWR("/api/{{methodCamelName}}", { refreshInterval: 3000 })
+
+  const { data } = useSWR(`{{apiPathParams}}`, { refreshInterval: 3000 })
 
   const prevDataRef = useRef<unknown>(null)
 
