--- a/plop-templates/hookGetTable.hbs
+++ b/plop-templates/hookGetTable.hbs
@@ -9,7 +9,7 @@ import { useAtomValue, useSetAtom } from "jotai"
 import { useEffect, useRef } from "react"
 import useSWR from "swr"
 
-export function useFetch{{tablePascalName}}({{#if methodParamsColumns}} { params }: { params: {{methodParamsTypeName}} }{{/if}}) {
+export function useFetch{{tablePascalName}}({{#if methodParamsColumns}} params: {{methodParamsTypeName}} {{/if}}) {
   const {{tableCamelName}} = useAtomValue({{tableCamelName}}Atom)
   const set{{tablePascalName}} = useSetAtom({{tableCamelName}}Atom)
   
