--- a/plop-templates/apiGetTable.hbs
+++ b/plop-templates/apiGetTable.hbs
@@ -15,7 +15,7 @@ const typeParamsSchema = z.object({
 }) satisfies z.ZodType<{{methodParamsTypeName}}>
 
 {{/if}}
-export async function GET(request: NextRequest{{#if methodParamsColumns}}, { params }: { params: {{methodParamsTypeName}} }{{/if}}): Promise<NextResponse> {
+export async function GET(request: NextRequest{{#if methodParamsColumns}}, params: {{methodParamsTypeName}} {{/if}}): Promise<NextResponse> {
   
   const session = await auth()
   const sessionPlayerId = session?.user?.playerId
