--- a/plop-templates/dbGetTable.hbs
+++ b/plop-templates/dbGetTable.hbs
@@ -2,6 +2,7 @@
 
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
+{{#if methodParamsColumns}}import { camelToSnake } from "@/methods/functions/camelToSnake"{{/if}}
 
 {{#if methodParamsColumns}}
 export type {{methodParamsTypeName}} = {
@@ -17,19 +18,15 @@ export type {{methodTypeName}} = {
 {{/each}}
 }
 
-
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
 export type {{indexTypeName}} = Record<string, {{methodTypeName}}>
 {{else}}
 export type {{indexTypeName}} = Record<number, {{methodTypeName}}> 
 {{/if}}
 
-
 export async function {{methodName}}({{#if methodParamsColumns}}params:{{methodParamsTypeName}}{{/if}}) {
   try {
     {{#if methodParamsColumns}}
-    const camelToSnake = (str: string) => str.replace(/[A-Z]/g, letter => `_${letter.toLowerCase()}`)
-
     const sqlParams = Object.values(params)
     const whereClauses = Object.keys(params).map((key, i) => `"${camelToSnake(key)}" = ${i + 1}`).join(" AND ")
     const sql = `SELECT * FROM {{schema}}.{{table}}${whereClauses ? " WHERE " + whereClauses : ""}`
@@ -39,7 +36,6 @@ export async function {{methodName}}({{#if methodParamsColumns}}params:{{methodP
 
     const result = await query(sql{{#if methodParamsColumns}}, sqlParams{{/if}})
     return result.rows as {{methodTypeName}}[]
-
 
   } catch (error) {
     console.error("Error fetching {{methodName}}:", error)
