--- a/plop-templates/dbGetMethodFetcher.hbs
+++ b/plop-templates/dbGetMethodFetcher.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - dbGetFunction.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - dbGetMethodFetcher.hbs
 
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
