--- a/plop-templates/hookGetMethodFetcher.hbs
+++ b/plop-templates/hookGetMethodFetcher.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetFunction.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetMethodFetcher.hbs
 
 "use client"
 import { {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
