--- a/plop-templates/apiGetMethodFetcher.hbs
+++ b/plop-templates/apiGetMethodFetcher.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - apiGetFunction.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - apiGetMethodFetcher.hbs
 /* eslint-disable @typescript-eslint/no-unused-vars */
 import { auth } from "@/auth"
 import { {{methodName}}{{#if methodParamsColumns}}, {{methodParamsTypeName}}{{/if}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
