--- a/plop-templates/dbGetTable copyy.hbs
+++ b/plop-templates/dbGetTable copyy.hbs
@@ -2,6 +2,7 @@
 
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
+{{#if methodParamsColumns}}import { camelToSnake } from "@/methods/functions/camelToSnake"{{/if}}
 
 {{#if methodParamsColumns}}
 export type {{methodParamsTypeName}} = {
@@ -11,13 +12,11 @@ export type {{methodParamsTypeName}} = {
 }
 {{/if}}
 
-
 export type {{methodTypeName}} = {
 {{#each methodColumns}}
   {{camelName}}{{optional}}: {{tsType}}
 {{/each}}
 }
-
 
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
 export type {{indexTypeName}} = Record<string, {{methodTypeName}}>
@@ -25,27 +24,21 @@ export type {{indexTypeName}} = Record<string, {{methodTypeName}}>
 export type {{indexTypeName}} = Record<number, {{methodTypeName}}> 
 {{/if}}
 
-export async function {{methodName}}() {
+export async function {{methodName}}({{#if methodParamsColumns}}params:{{methodParamsTypeName}}{{/if}}) {
   try {
-    const sql = `SELECT * FROM {{schema}}.{{methodRecords}}();`
-    
-    const result = await query(sql)
+    {{#if methodParamsColumns}}
+    const sqlParams = Object.values(params)
+    const whereClauses = Object.keys(params).map((key, i) => `"${camelToSnake(key)}" = ${i + 1}`).join(" AND ")
+    const sql = `SELECT * FROM {{schema}}.{{table}}${whereClauses ? " WHERE " + whereClauses : ""}`
+    {{else}}
+    const sql = `SELECT * FROM {{schema}}.{{table}}`
+    {{/if}}
+
+    const result = await query(sql{{#if methodParamsColumns}}, sqlParams{{/if}})
     return result.rows as {{methodTypeName}}[]
+
   } catch (error) {
     console.error("Error fetching {{methodName}}:", error)
     throw new Error("Failed to fetch {{methodName}}")
-  }
-}
-
-export async function {{methodNameByKey}}(params: {{methodParamsTypeName}}) {
-  try {
-    const sqlParams = Object.values(params)
-    const sql = `SELECT * FROM {{schema}}.{{methodRecordsByKey}}({{sqlParamsPlaceholders}});`
-    
-    const result = await query(sql, sqlParams)
-    return result.rows as {{methodTypeName}}[]
-  } catch (error) {
-    console.error("Error fetching {{methodNameByKey}}:", error)
-    throw new Error("Failed to fetch {{methodNameByKey}}")
   }
 }
