--- a/plop-templates/apiGetTableByKey.hbs
+++ b/plop-templates/apiGetTableByKey.hbs
@@ -2,23 +2,34 @@
 /* eslint-disable @typescript-eslint/no-unused-vars */
 
 import { auth } from "@/auth"
-import { {{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
+import { {{methodNameByKey}}{{#if methodParamsColumns}}, {{methodParamsTypeName}}{{/if}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 import crypto from "crypto"
 import { NextRequest, NextResponse } from "next/server"
 {{#if methodParamsColumns}}
 import z from "zod"
 
+const typeParamsSchema = z.object({
+  {{#each methodParamsColumns}}
+  {{camelName}}: z.coerce.{{tsType}}(),
+  {{/each}}
+}) satisfies z.ZodType<{{methodParamsTypeName}}>
+
 {{/if}}
-export async function GET(request: NextRequest): Promise<NextResponse> {
+export async function GET(request: NextRequest{{#if methodParamsColumns}}, params: {{methodParamsTypeName}} {{/if}}): Promise<NextResponse> {
   
   const session = await auth()
   const sessionPlayerId = session?.user?.playerId
   if (!sessionPlayerId || isNaN(sessionPlayerId)) {
     return NextResponse.json({ success: false })
   }
+  
+  {{#if methodParamsColumns}}
+  const paramsFromPromise = await params
+  const parsedParams = typeParamsSchema.parse(paramsFromPromise)
+  {{/if}}
 
   try {
-    const result = await {{methodName}}()
+    const result = await {{methodNameByKey}}({{#if methodParamsColumns}}parsedParams{{/if}})
   
     const etag = crypto.createHash("sha1").update(JSON.stringify(result)).digest("hex")
     const clientEtag = request.headers.get("if-none-match")
