--- a/plop-templates/apiGetTableByKey.hbs
+++ b/plop-templates/apiGetTableByKey.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - apiGetTable.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - apiGetTableByKey.hbs
 /* eslint-disable @typescript-eslint/no-unused-vars */
 
 import { auth } from "@/auth"
