--- a/plop-templates/hookGetTableByKeyServer.hbs
+++ b/plop-templates/hookGetTableByKeyServer.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableServer.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableByKeyServer.hbs
 "use server"
 
 import { {{indexMethodName}} } from "@/methods/functions/converters"
