--- a/plop-templates/hookGetMethodFetcherServer.hbs
+++ b/plop-templates/hookGetMethodFetcherServer.hbs
@@ -10,11 +10,14 @@ import type { {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{sche
 import type { {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
 {{/if}}
 
-export async function {{methodName}}Server({{#if methodParamsColumns}} params: {{methodParamsTypeName}}{{/if}}): Promise<{{indexTypeName}}> {
+export async function {{methodName}}Server({{#if methodParamsColumns}} params: {{methodParamsTypeName}}{{/if}}): Promise<{
+  raw: {{methodTypeName}}[]
+  byKey: {{indexTypeName}}
+}> {
   const {{methodName}}Data = await {{methodName}}({{#if methodParamsColumns}}params{{/if}})
 
   const data = {{methodName}}Data ? ({{{indexMethodName}}}({{{indexMethodParams}}}, {{methodName}}Data) as {{indexTypeName}}) : {}
 
-  return data
+  return { raw: {{methodName}}Data, byKey: data }
 }
 
