--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -6,7 +6,7 @@ import { {{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{t
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
 import type { {{methodTypeName}}, {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 {{else}}
-import type { {{methodTypeName}}. {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
+import type { {{methodTypeName}}, {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 {{/if}}
 
 export async function {{methodName}}Server(): Promise<{
