--- a/plop-templates/hookGetTable.hbs
+++ b/plop-templates/hookGetTable.hbs
@@ -8,9 +8,9 @@ import { useAtomValue, useSetAtom } from "jotai"
 import { useEffect, useRef } from "react"
 import useSWR from "swr"
 
-export function useFetch{{tablePascalName}}() {
+export function useFetch{{schemaTablePascalName}}() {
   const {{tableCamelName}} = useAtomValue({{tableCamelName}}Atom)
-  const set{{tablePascalName}} = useSetAtom({{tableCamelName}}Atom)
+  const set{{schemaTablePascalName}} = useSetAtom({{tableCamelName}}Atom)
   
   const { data } = useSWR(`{{apiPathParams}}`, { refreshInterval: 3000 })
 
@@ -20,10 +20,10 @@ export function useFetch{{tablePascalName}}() {
     if (data === undefined) return
     if (JSON.stringify(prevDataRef.current) !== JSON.stringify(data)) {
       const index = data ? ({{{indexMethodName}}}({{{indexMethodParams}}}, data) as {{indexTypeName}}) : {}
-      set{{tablePascalName}}(index)
+      set{{schemaTablePascalName}}(index)
       prevDataRef.current = data
     }
-  }, [data, set{{tablePascalName}}])
+  }, [data, set{{schemaTablePascalName}}])
 
   return { {{tableCamelName}} }
 }
