--- a/plop-templates/apiGetTableByKey.hbs
+++ b/plop-templates/apiGetTableByKey.hbs
@@ -19,8 +19,8 @@ const typeParamsSchema = z.object({
 export async function GET(request: NextRequest{{#if methodParamsColumns}}, { params }: { params: TApiParams }  {{/if}}): Promise<NextResponse> {
   
   const session = await auth()
-  const sessionPlayerId = session?.user?.playerId
-  if (!sessionPlayerId || isNaN(sessionPlayerId)) {
+  const sessionUserId = session?.user?.userId
+  if (!sessionUserId || isNaN(sessionUserId)) {
     return NextResponse.json({ success: false })
   }
   
