--- a/plop-templates/hookMutateMethodFetcher.hbs
+++ b/plop-templates/hookMutateMethodFetcher.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - SHOULD BE EDITED MANUALLY TO END CONFIGURATION - hookMutateMethodFetcher.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - hookMutateMethodFetcher.hbs
 "use client"
 
 import { {{indexTypeName}} {{#if methodParamsColumns}}, {{methodParamsTypeName}}{{/if}}  } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
