--- a/plop-templates/snippetHookTable.hbs
+++ b/plop-templates/snippetHookTable.hbs
@@ -2,7 +2,7 @@
   "Destructure use{{schemaTablePascalName}}": {
     "prefix": "hook_{{schema}}_core_use{{schemaTablePascalName}}",
     "body": [
-      "const { {{tableCamelName}} } = useFetch{{schemaTablePascalName}}({$1})"
+      "const { {{tableCamelName}} } = useFetch{{schemaTablePascalName}}()"
     ],
     "description": "Destructuring use{{schemaTablePascalName}} hook"
   },
