--- a/plop-templates/dbGetMethodAction.hbs
+++ b/plop-templates/dbGetMethodAction.hbs
@@ -1,36 +1,36 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - dbGetMethodAction.hbs "use server" import { query } from
-"@/db/postgresMainDatabase/postgresMainDatabase"
+// GENERATED CODE - DO NOT EDIT MANUALLY - dbGetMethodAction.hbs
+
+"use server"
+import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
 
 {{#if methodParamsColumns}}
-  export type
-  {{methodParamsTypeName}}
-  = {
-  {{#each methodParamsColumns}}
-    {{camelName}}:
-    {{tsType}}
-  {{/each}}
-  }
-{{/if}}
-
-export type
-{{methodTypeName}}
-= {
-{{#each methodColumns}}
-  {{camelName}}{{optional}}:
-  {{tsType}}
+export type {{methodParamsTypeName}} = {
+{{#each methodParamsColumns}}
+  {{camelName}}: {{tsType}}
 {{/each}}
-} export async function
-{{methodCamelName}}({{#if methodParamsColumns}}params: {{methodParamsTypeName}}{{/if}}) { try {
-{{#if methodParamsColumns}}
-  const sqlParams = Object.values(params) const sql = `SELECT * FROM
-  {{schema}}.{{method}}({{sqlParamsPlaceholders}});` const result = await query(sql, sqlParams)
-{{else}}
-  const sql = `SELECT * FROM
-  {{schema}}.{{method}}();` const result = await query(sql)
+}
 {{/if}}
 
-return result.rows[0] as
-{{methodTypeName}}
-} catch (error) { console.error("Error executing
-{{methodCamelName}}:", error) throw new Error("Failed to execute
-{{methodCamelName}}") } }
+export type {{methodTypeName}} = {
+{{#each methodColumns}}
+  {{camelName}}{{optional}}: {{tsType}}
+{{/each}}
+}
+
+export async function {{methodCamelName}}({{#if methodParamsColumns}}params: {{methodParamsTypeName}}{{/if}}) {
+  try {
+    {{#if methodParamsColumns}}
+    const sqlParams = Object.values(params)
+    const sql = `SELECT * FROM {{schema}}.{{method}}({{sqlParamsPlaceholders}});`
+    const result = await query(sql, sqlParams)
+    {{else}}
+    const sql = `SELECT * FROM {{schema}}.{{method}}();`
+    const result = await query(sql)
+    {{/if}}
+
+    return result.rows[0] as {{methodTypeName}}
+  } catch (error) {
+    console.error("Error executing {{methodCamelName}}:", error)
+    throw new Error("Failed to execute {{methodCamelName}}")
+  }
+}
